--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpsa2QVwj0ZSD42iPItJ34",
+      "authorship_tag": "ABX9TyPBJJqkeG4gORjtHEvh+uUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,45 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Python in Google Colab\n",
+        "\n",
+        "Welcome!  \n",
+        "This first notebook introduces the Colab environment, basic Python objects, and how to read error messages.  \n",
+        "\n",
+        "💡**Saving your work to GitHub:**  \n",
+        "If your notebook is connected to a GitHub repo, you can use **File → Save a copy in GitHub** to commit your progress."
+      ],
       "metadata": {
-        "id": "ic0rug7HzMNI"
+        "id": "FM3MOqhdzqTc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Text vs Code Cells\n",
+        "\n",
+        "- Add a **text cell** with `+ Text`.  \n",
+        "- Add a **code cell** with `+ Code`.  \n",
+        "- Run a code cell with **Shift+Enter** or by clicking the ▶️ button.\n",
+        "\n",
+        "When you run a cell, Python executes it and shows the result.\n",
+        "\n",
+        "✅**Checkpoint:** Remember to save your notebook to GitHub (File → Save a copy in GitHub)."
+      ],
+      "metadata": {
+        "id": "JWBZPwC_0GGn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bn2SNCnsz_xi"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
