--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMMZilExA5AleOtTOnhKif",
+      "authorship_tag": "ABX9TyPN0F+NLFq6gwlpDasM0IgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,11 +108,11 @@
         "print(\"Nice to meet you!\")"
       ],
       "metadata": {
-        "id": "Z84mztms1ZWX",
-        "outputId": "877248b7-88df-41ea-c356-135cfc1a42ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z84mztms1ZWX",
+        "outputId": "877248b7-88df-41ea-c356-135cfc1a42ea"
       },
       "execution_count": 5,
       "outputs": [
@@ -148,11 +148,11 @@
         "print(y)"
       ],
       "metadata": {
-        "id": "alDGtnmf19Xf",
-        "outputId": "a626bbfc-0290-4234-d5a1-071aefb9abaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "alDGtnmf19Xf",
+        "outputId": "a626bbfc-0290-4234-d5a1-071aefb9abaa"
       },
       "execution_count": 6,
       "outputs": [
@@ -171,7 +171,7 @@
         "### Exercise 2\n",
         "1. Create a variable that stores your name.  \n",
         "2. Print a message that says `\"Hello, <your name>!\"`.  \n",
-        "   * You can add strings with `+`\n",
+        "   * You can concatenate strings with `+`\n",
         "\n",
         "✅ **Checkpoint:** Save your changes to GitHub."
       ],
@@ -186,13 +186,13 @@
         "print(\"Hello, \" + name + \"!\")"
       ],
       "metadata": {
-        "id": "BLX8AtGX2S17",
-        "outputId": "6d3b9ba2-42d5-402b-cebf-af8f91f7b6d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BLX8AtGX2S17",
+        "outputId": "3cc7182f-1f13-4f65-a94f-571c1132acfe"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,10 +204,96 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Core Data Types\n",
+        "\n",
+        "Python has a few essential types:\n",
+        "\n",
+        "- Numbers: `int` (integers), `float` (decimals)  \n",
+        "- Text: `str` (strings)  \n",
+        "- True/False: `bool`  \n",
+        "- Nothing: `None`  \n",
+        "- Collections: `list` (ordered values)"
+      ],
+      "metadata": {
+        "id": "R9fqciWs3XsM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 42          # int\n",
+        "b = 3.14        # float\n",
+        "c = \"Python\"    # str\n",
+        "d = True        # bool\n",
+        "e = None        # special \"nothing\"\n",
+        "\n",
+        "numbers = [1, 2, 3]  # list\n",
+        "print(a, b, c, d, e, numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aMCB_gxF2j2u",
+        "outputId": "879993a0-2104-4dd8-e121-a673dda07f80"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42 3.14 Python True None [1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exercise 3\n",
+        "1. Make a list with three numbers of your choice.  \n",
+        "2. Print the sum and average of those numbers.\n",
+        "   - Hint: try `sum(my_list)` and `len(my_list)`.\n",
+        "\n",
+        "✅ **Checkpoint:** Save your notebook after finishing the exercise."
+      ],
+      "metadata": {
+        "id": "B87lL4p_3t91"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [6, 1, 8]\n",
+        "average = sum(my_list) / len(my_list)\n",
+        "print(average)"
+      ],
+      "metadata": {
+        "id": "Jc7TWeTm3kX6",
+        "outputId": "2ebfbc8c-ce05-494a-a0cc-02649d028e58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aMCB_gxF2j2u"
+        "id": "NRrnm3SE4NFM"
       },
       "execution_count": null,
       "outputs": []
