--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPN0F+NLFq6gwlpDasM0IgD",
+      "authorship_tag": "ABX9TyPC/NT4tv59Sgh9IfCwFfeC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,11 +272,11 @@
         "print(average)"
       ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6",
-        "outputId": "2ebfbc8c-ce05-494a-a0cc-02649d028e58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jc7TWeTm3kX6",
+        "outputId": "2ebfbc8c-ce05-494a-a0cc-02649d028e58"
       },
       "execution_count": 20,
       "outputs": [
@@ -290,10 +290,170 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Looking Around\n",
+        "\n",
+        "You can ask Python about objects:\n",
+        "\n",
+        "- `type(obj)` tells you the type.  \n",
+        "- `dir(obj)` shows what functions and attributes are available.  \n",
+        "- `help(obj)` (or `obj?` in Colab) shows documentation.  \n",
+        "- Tab-completion in Colab lets you explore interactively."
+      ],
+      "metadata": {
+        "id": "22uHbb9R4jXS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = \"hello\"\n",
+        "print(type(word))\n",
+        "print(dir(word)[:10])  # first 10 options"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NRrnm3SE4NFM",
+        "outputId": "6703351f-a4bc-4199-abd2-cb555be60a54"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__']\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NRrnm3SE4NFM"
+        "id": "uWxJ0E7r503l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exercise 4\n",
+        "1. Use `dir(str)` to see what strings can do.  \n",
+        "2. Pick one method (e.g. `.upper()` or `.capitalize()`) and try it on a word.\n"
+      ],
+      "metadata": {
+        "id": "K0awzQVL5LJ8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir(str)\n",
+        "print(\"hello\".replace(\"h\",\"H\"))"
+      ],
+      "metadata": {
+        "id": "b-9rIoAM4tFN",
+        "outputId": "5729af9c-f8d5-415a-8a64-6bcb3961ba02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Errors and Resilience\n",
+        "\n",
+        "When something goes wrong, Python shows a **traceback**.\n",
+        "\n",
+        "- The **last line** shows the error type and message.  \n",
+        "- The **lines above** show where the error happened.  \n",
+        "- Read from bottom → up.\n",
+        "\n",
+        "Here’s the **anatomy** of a simple traceback:\n"
+      ],
+      "metadata": {
+        "id": "6tV6EBOT6Bf1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example: NameError\n",
+        "print(my_variable)  # oops, never defined!\n"
+      ],
+      "metadata": {
+        "id": "mPDC0st85QL7",
+        "outputId": "f9dd21e2-31c4-4634-8472-52c3b6f4360a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'my_variable' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-740855557.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Example: NameError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_variable\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# oops, never defined!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'my_variable' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Typical traceback output:**\n",
+        "\n",
+        "```python\n",
+        "---------------------------------------------------------------------------\n",
+        "\n",
+        "NameError                                 Traceback (most recent call last)\n",
+        "\n",
+        "/tmp/ipython-input-740855557.py in <cell line: 0>()\n",
+        "      1 # Example: NameError\n",
+        "----> 2 print(my_variable)  # oops, never defined!\n",
+        "\n",
+        "NameError: name 'my_variable' is not defined\n",
+        "```\n",
+        "\n",
+        "\n",
+        "- **\"Traceback (most recent call last)\"**: Python is about to explain the error.  \n",
+        "- **File/line info**: shows which cell and line failed.  \n",
+        "- **Error type + message**: here it's `NameError`, with explanation.\n",
+        "\n",
+        "✅ **Checkpoint:** Save your work after running the error example.\n"
+      ],
+      "metadata": {
+        "id": "lDucU0Jm6Pxn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XXLgNKki6Gkg"
       },
       "execution_count": null,
       "outputs": []
