--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPC/NT4tv59Sgh9IfCwFfeC",
+      "authorship_tag": "ABX9TyO45lf/BjOsKAr07WuQWf+w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,36 +94,13 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Hi, my name is Guru!"
-      ],
-      "metadata": {
-        "id": "oc3Jwr3w15Gp"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "print(\"Nice to meet you!\")"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z84mztms1ZWX",
-        "outputId": "877248b7-88df-41ea-c356-135cfc1a42ea"
+        "id": "jt_WW0s6_z_f"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nice to meet you!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -181,27 +158,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "name = \"Guru\"\n",
-        "print(\"Hello, \" + name + \"!\")"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BLX8AtGX2S17",
-        "outputId": "3cc7182f-1f13-4f65-a94f-571c1132acfe"
+        "id": "5QW0P4Vw_yQ_"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, Guru!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -266,40 +228,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "my_list = [6, 1, 8]\n",
-        "average = sum(my_list) / len(my_list)\n",
-        "print(average)"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jc7TWeTm3kX6",
-        "outputId": "2ebfbc8c-ce05-494a-a0cc-02649d028e58"
+        "id": "Jc7TWeTm3kX6"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5.0\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. Looking Around\n",
+        "## 4. Looking Around with `dir`, `type`, and `help`\n",
         "\n",
-        "You can ask Python about objects:\n",
+        "Python lets you *inspect objects*:\n",
         "\n",
-        "- `type(obj)` tells you the type.  \n",
-        "- `dir(obj)` shows what functions and attributes are available.  \n",
-        "- `help(obj)` (or `obj?` in Colab) shows documentation.  \n",
-        "- Tab-completion in Colab lets you explore interactively."
+        "- `type(obj)` → shows the type (e.g. `str`, `list`).  \n",
+        "- `dir(obj)` → lists names (methods and attributes) the object has.  \n",
+        "  - Names like `method()` (e.g. `upper`) are the ones you’ll usually call.  \n",
+        "  - Names starting with `__like_this__` are *special methods* (we’ll explore later).  \n",
+        "  - Names starting with capital letters are often classes (we'll explore later).  \n",
+        "- `help(obj)` or `obj?` (in Colab) → shows documentation.  \n",
+        "- `obj??` sometimes shows source code if available.\n",
+        "\n",
+        "You can comment/uncomment lines and rerun cells to explore a code cell. Try it out on the code cell below.\n"
       ],
       "metadata": {
         "id": "22uHbb9R4jXS"
@@ -309,71 +260,45 @@
       "cell_type": "code",
       "source": [
         "word = \"hello\"\n",
+        "\n",
         "print(type(word))\n",
-        "print(dir(word)[:10])  # first 10 options"
+        "#print(dir(word)[:15])  # first 15 items for a glimpse\n",
+        "\n",
+        "# Try help:\n",
+        "#help(str.upper)  # documentation for one method"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRrnm3SE4NFM",
-        "outputId": "6703351f-a4bc-4199-abd2-cb555be60a54"
+        "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n",
-            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__']\n"
+            "<class 'str'>\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uWxJ0E7r503l"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "### Exercise 4\n",
-        "1. Use `dir(str)` to see what strings can do.  \n",
-        "2. Pick one method (e.g. `.upper()` or `.capitalize()`) and try it on a word.\n"
+        "1. Use `type()` on a number, a list, and your name string.  \n",
+        "2. Use `dir(str)` to list string methods. Try `.upper()` and `.replace()`.  \n",
+        "3. Use `help(list.append)` and `help(str.split)` to see documentation.  \n",
+        "4. Try `str?` and `str??` in a code cell.\n",
+        "\n",
+        "✅ **Checkpoint:** Save your work to GitHub.\n"
       ],
       "metadata": {
         "id": "K0awzQVL5LJ8"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dir(str)\n",
-        "print(\"hello\".replace(\"h\",\"H\"))"
-      ],
-      "metadata": {
-        "id": "b-9rIoAM4tFN",
-        "outputId": "5729af9c-f8d5-415a-8a64-6bcb3961ba02",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -399,12 +324,12 @@
         "print(my_variable)  # oops, never defined!\n"
       ],
       "metadata": {
-        "id": "mPDC0st85QL7",
-        "outputId": "f9dd21e2-31c4-4634-8472-52c3b6f4360a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        }
+        },
+        "id": "mPDC0st85QL7",
+        "outputId": "f9dd21e2-31c4-4634-8472-52c3b6f4360a"
       },
       "execution_count": 46,
       "outputs": [
@@ -450,10 +375,129 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Exercise 5\n",
+        "1. In the cell below, fix the NameError by defining `my_variable = \"I fixed it!\"` first.  \n",
+        "2. Try to produce a `TypeError` by adding a number to a string.\n"
+      ],
+      "metadata": {
+        "id": "C13U6nlI6v_V"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "XXLgNKki6Gkg"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Kernel State and Order of Execution\n",
+        "\n",
+        "The **kernel** is the Python engine running your code.  \n",
+        "- It remembers variables and their values across cells.  \n",
+        "- If you run cells out of order, the results may be confusing.  \n",
+        "- You can restart the kernel to clear everything.\n",
+        "\n",
+        "Try running cells in the wrong order:\n"
+      ],
+      "metadata": {
+        "id": "XATX78LI7WEI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run this second\n",
+        "print(my_pet)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "id": "eCIwjEaT7Fa_",
+        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'my_pet' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4209057521.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run this second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'my_pet' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run this first\n",
+        "my_pet = \"cat\""
+      ],
+      "metadata": {
+        "id": "5WCzLhBR-R1s"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exercise 6\n",
+        "1. Run the second cell before the first. What happens?  \n",
+        "2. Now run the first cell, then the second — what changes?  \n",
+        "3. Restart the kernel (**Runtime** → **Restart session**), then run the second cell again.  \n",
+        "   - Notice that the kernel \"forgot\" your variable.\n",
+        "4. You can also delete a variable with `del(my_variable)`.\n"
+      ],
+      "metadata": {
+        "id": "AYd68EvS-klp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DdcQPO4kAQfC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary\n",
+        "\n",
+        "You learned:\n",
+        "- How to run text and code cells in Colab  \n",
+        "- The difference between expressions, statements, and variables  \n",
+        "- Basic Python types (`int`, `float`, `str`, `bool`, `None`, `list`)  \n",
+        "- How to explore objects with `type()`, `dir()`, `help()`, `?`, and `??`  \n",
+        "- How to read and understand a traceback  \n",
+        "- What the **kernel state** is, and why running cells in order matters\n",
+        "\n",
+        "👉 Save your notebook and commit it to GitHub. Restart and run all cells if you get lost."
+      ],
+      "metadata": {
+        "id": "QD_DqVUk_kmw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h4Nw_MVa-zXd"
       },
       "execution_count": null,
       "outputs": []
