--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO45lf/BjOsKAr07WuQWf+w",
+      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,12 +30,11 @@
       "cell_type": "markdown",
       "source": [
         "# Python in Google Colab\n",
-        "\n",
-        "Welcome!  \n",
-        "This first notebook introduces the Colab environment, basic Python objects, and how to read error messages.  \n",
+        "  \n",
+        "This notebook introduces the Colab environment, basic Python objects, and a bit on how to read error messages.  \n",
         "\n",
         "💡**Saving your work to GitHub:**  \n",
-        "If your notebook is connected to a GitHub repo, you can use **File → Save a copy in GitHub** to commit your progress."
+        "If your notebook is connected to a GitHub repo, you can use **File → Save a copy in GitHub** to _commit_ your progress."
       ],
       "metadata": {
         "id": "FM3MOqhdzqTc"
@@ -50,7 +49,7 @@
         "- Add a **code cell** with `+ Code`.  \n",
         "- Run a code cell with **Shift+Enter** or by clicking the ▶️ button.\n",
         "\n",
-        "When you run a cell, Python executes it and shows the result.\n",
+        "When you run a cell, Python executes the code on a Google node somewhere in the cloud and shows the result.\n",
         "\n",
         "✅**Checkpoint:** Remember to save your notebook to GitHub (File → Save a copy in GitHub)."
       ],
@@ -71,7 +70,7 @@
         "id": "bn2SNCnsz_xi",
         "outputId": "de6e832e-5bc6-468b-ef36-6a798672d962"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +110,11 @@
         "- An **expression** produces a value (like `2 + 3`).  \n",
         "- A **statement** does something (like `x = 5`).\n",
         "\n",
-        "You can store values in variables with `=`."
+        "You can store values in **variables** with `=`.\n",
+        "\n",
+        "_Useful tips:_\n",
+        "- You can see what variables have been assigned by using a _magic command_ -- a way to interact with the kernel state. Try running `%whos` in a code cell after you define a variable.\n",
+        "- You can **delete** a variable with the command `del(my_variable)`."
       ],
       "metadata": {
         "id": "BC_WHU6d2K1B"
@@ -131,7 +134,7 @@
         "id": "alDGtnmf19Xf",
         "outputId": "a626bbfc-0290-4234-d5a1-071aefb9abaa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +151,7 @@
         "### Exercise 2\n",
         "1. Create a variable that stores your name.  \n",
         "2. Print a message that says `\"Hello, <your name>!\"`.  \n",
-        "   * You can concatenate strings with `+`\n",
+        "   * You can concatenate strings with `+`, then `print` them, or separate objects by commas in the `print` statement.\n",
         "\n",
         "✅ **Checkpoint:** Save your changes to GitHub."
       ],
@@ -201,7 +204,7 @@
         "id": "aMCB_gxF2j2u",
         "outputId": "879993a0-2104-4dd8-e121-a673dda07f80"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +219,7 @@
       "cell_type": "markdown",
       "source": [
         "### Exercise 3\n",
-        "1. Make a list with three numbers of your choice.  \n",
+        "1. Make a list of numbers of your choice.  \n",
         "2. Print the sum and average of those numbers.\n",
         "   - Hint: try `sum(my_list)` and `len(my_list)`.\n",
         "\n",
@@ -232,7 +235,7 @@
       "metadata": {
         "id": "Jc7TWeTm3kX6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +277,7 @@
         "id": "NRrnm3SE4NFM",
         "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,45 +314,14 @@
         "- The **lines above** show where the error happened.  \n",
         "- Read from bottom → up.\n",
         "\n",
-        "Here’s the **anatomy** of a simple traceback:\n"
-      ],
-      "metadata": {
-        "id": "6tV6EBOT6Bf1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "Here’s the **anatomy** of a simple traceback:\n",
+        "\n",
+        "```python\n",
         "# Example: NameError\n",
-        "print(my_variable)  # oops, never defined!\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
-        },
-        "id": "mPDC0st85QL7",
-        "outputId": "f9dd21e2-31c4-4634-8472-52c3b6f4360a"
-      },
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'my_variable' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-740855557.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Example: NameError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_variable\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# oops, never defined!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_variable' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Typical traceback output:**\n",
+        "print(my_variable)  # oops, never defined!\n",
+        "```\n",
+        "\n",
+        "This give the following output:\n",
         "\n",
         "```python\n",
         "---------------------------------------------------------------------------\n",
@@ -371,15 +343,16 @@
         "✅ **Checkpoint:** Save your work after running the error example.\n"
       ],
       "metadata": {
-        "id": "lDucU0Jm6Pxn"
+        "id": "6tV6EBOT6Bf1"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
         "### Exercise 5\n",
-        "1. In the cell below, fix the NameError by defining `my_variable = \"I fixed it!\"` first.  \n",
-        "2. Try to produce a `TypeError` by adding a number to a string.\n"
+        "1. In the cell below, test the NameError code.\n",
+        "2. Fix the NameError by defining `my_variable = \"I fixed it!\"` first.  \n",
+        "3. Try to produce a `TypeError` by adding a number to a string.\n"
       ],
       "metadata": {
         "id": "C13U6nlI6v_V"
@@ -391,7 +364,7 @@
       "metadata": {
         "id": "XXLgNKki6Gkg"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +397,7 @@
         "id": "eCIwjEaT7Fa_",
         "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -448,7 +421,7 @@
       "metadata": {
         "id": "5WCzLhBR-R1s"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -459,7 +432,10 @@
         "2. Now run the first cell, then the second — what changes?  \n",
         "3. Restart the kernel (**Runtime** → **Restart session**), then run the second cell again.  \n",
         "   - Notice that the kernel \"forgot\" your variable.\n",
-        "4. You can also delete a variable with `del(my_variable)`.\n"
+        "\n",
+        "_Remember:_\n",
+        "- You can also delete a variable with `del(my_variable)`.\n",
+        "- You can see what variables are stored in the kernel with `$whos`."
       ],
       "metadata": {
         "id": "AYd68EvS-klp"
